--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <h1>iezzeds website<h1>
 <a href="https://www.youtube.com/channel/UCrDstkN-FPhq8X672etuTZA">iezzed99 youtube</a>
+<img src="photo.png" />
+  <img src="iezzed png.png" />
