--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<style>
+body {
+  background-image: url('disco-party.jfif');
+}
+</style>
 <h1>iezzeds website<h1>
 <a href="https://www.youtube.com/channel/UCrDstkN-FPhq8X672etuTZA">iezzed99 youtube</a>
 <img src="photo.png" />
